tests/snapshots/run_wpt_conformance__coreml_averagePool2d_float32_4D_tensor_options_outputShapeRounding_ceil_with_asymmetric_window.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor options.outputShapeRounding=ceil with asymmetric window, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type avg_pool: Required param 'pad' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 1, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[], strides=[2, 2], windowDimensions=[3, 2]);
  }

  outputs { averagePool2dOutput; }
}
