tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float16_1D_tensor_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 1D tensor options.axis=0, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: Param 'x' has incorrect type for operator 'ios17.batch_norm'. Expected { ...]>, ...]>, ?, ?, [?, [?, tensor<fp16, tensor<fp32 }; got tensor<fp16, [6]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[6];
  }

  consts {
    operand_1: f16[6] @bytes([208, 199, 250, 213, 197, 80, 254, 210, 126, 213, 52, 209]);
    operand_2: f16[6] @bytes([138, 83, 156, 78, 169, 82, 5, 81, 109, 83, 128, 80]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_2, axis=0, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
