tests/snapshots/run_wpt_conformance__coreml_batchNormalization_float16_2D_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization_constant.https.any.js batchNormalization float16 2D constant tensors default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type batch_norm: In 'ios17.batch_norm' operations, tensors parameter mean[0], parameter variance[0], parameter beta[0], parameter gamma[0], and parameter epsilon[0] must have the same data type.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[4, 6] @bytes([42, 209, 1, 84, 236, 211, 217, 209, 48, 85, 1, 213, 197, 211, 104, 174, 29, 209, 31, 83, 172, 80, 33, 83, 33, 85, 98, 213, 206, 84, 17, 86, 86, 205, 15, 214, 174, 200, 3, 85, 86, 213, 203, 83, 72, 212, 14, 202]);
    operand_1: f16[6] @bytes([208, 199, 250, 213, 197, 80, 254, 210, 126, 213, 52, 209]);
    operand_2: f16[6] @bytes([138, 83, 156, 78, 169, 82, 5, 81, 109, 83, 128, 80]);
  }

  nodes {
    [bnOutput] = batchNormalization(operand_0, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
